[FUEL-391] quantum OCF agents and manifests
add pid into files
remove 's' suffix from resource timeouts. it causes ISO8601 parsing errors in Pacemaker 1.1.7

--- a/deployment/puppet/openstack/.project
+++ b/deployment/puppet/openstack/.project
@@ -17,6 +17,7 @@
 		<project>mysql</project>
 		<project>nagios</project>
 		<project>nova</project>
+		<project>corosync</project>
 		<project>ntpd</project>
 		<project>quantum</project>
 		<project>rsyslog</project>
