Adding support of VirtIO disk drives

--- a/iso/ks.cfg
+++ b/iso/ks.cfg
@@ -25,7 +25,7 @@ clearpart --all --initlabel
 
 # hard drives
 drives=""
-for drv in `ls -1 /sys/block | grep "sd\|hd"`; do
+for drv in `ls -1 /sys/block | grep "sd\|hd\|vd"`; do
     if (grep -q 0 /sys/block/${drv}/removable); then
         drives="${drives} ${drv}"
     fi
