--- a/iso/ks.cfg
+++ b/iso/ks.cfg
@@ -8,9 +8,8 @@ selinux --disabled
 url --url http://mirror.stanford.edu/yum/pub/centos/6.3/os/x86_64/
 network --bootproto=dhcp
 repo --name=Base --mirrorlist=http://mirrorlist.centos.org/?release=6.3&arch=x86_64&repo=os
-#repo --name=Base --baseurl=http://172.18.67.168/centos-repo/centos-6.3
 repo --name=Updates --mirrorlist=http://mirrorlist.centos.org/?release=6.3&arch=x86_64&repo=updates
-repo --name=Mirantis --mirrorlist=http://download.mirantis.com/epel-fuel-folsom/mirror.internal.list
+repo --name=Mirantis --mirrorlist=http://download.mirantis.com/epel-fuel-folsom/mirror.external.list
 repo --name=PuppetLabs --baseurl=http://yum.puppetlabs.com/el/6/products/x86_64/
 keyboard us
 rootpw r00tme
@@ -25,7 +24,7 @@ clearpart --all --initlabel
 
 # hard drives
 drives=""
-for drv in `ls -1 /sys/block | grep "sd\|hd\|vd"`; do
+for drv in `ls -1 /sys/block | grep -e "sd\|hd\|vd"`; do
     if (grep -q 0 /sys/block/${drv}/removable); then
         drives="${drives} ${drv}"
     fi
