--- a/iso/Makefile
+++ b/iso/Makefile
@@ -11,7 +11,7 @@ FUEL_DIR:=$(PWD)/../deployment/puppet
 SOURCE_DIR:=$(PWD)
 BUILD_DIR:=$(PWD)/build
 
-LOCAL_MIRROR:=$(PWD)/local_mirror
+LOCAL_MIRROR:=$(PWD)/../local_mirror
 LOCAL_MIRROR_CENTOS:=$(LOCAL_MIRROR)/centos
 LOCAL_MIRROR_CENTOS_OS_BASEURL:=$(LOCAL_MIRROR_CENTOS)/$(CENTOS_RELEASE)/os/$(CENTOS_ARCH)
 LOCAL_MIRROR_UBUNTU:=$(LOCAL_MIRROR)/ubuntu/dists/$(UBUNTU_DISTR)
