Using link cobbler_system to cobbler_system.py script now. 127.0.0.1 DNS server will be added if static/static configuration was used. Openstack_system sample config file config.yaml will be also located at /root folder.

--- a/iso/ks.cfg
+++ b/iso/ks.cfg
@@ -155,7 +155,7 @@ cp ${SOURCE}/bootstrap_admin_node.conf /etc/init/bootstrap_admin_node.conf
 echo "ENABLED=1" > /etc/sysconfig/bootstrap_admin_node
 
 # Copying cobbler system script to sbin folder
-cp /etc/puppet/modules/cobbler/examples/cobbler_system.py /usr/local/sbin
+ln -s /etc/puppet/modules/cobbler/examples/cobbler_system.py /usr/local/sbin/cobbler_system
 
 # Copying version.yaml file. It contains COMMIT_SHA of last commit.
 mkdir -p /etc/fuel
