Update project files

--- a/deployment/puppet/mcollective/.project
+++ b/deployment/puppet/mcollective/.project
@@ -3,7 +3,7 @@
 	<name>mcollective</name>
 	<comment></comment>
 	<projects>
-		<project>ntpd</project>
+		<project>ntp</project>
 		<project>openstack</project>
 		<project>rabbitmq</project>
 		<project>stdlib</project>
