--- a/deployment/puppet/openstack/.project
+++ b/deployment/puppet/openstack/.project
@@ -5,6 +5,7 @@
 	<projects>
 		<project>apt</project>
 		<project>cinder</project>
+		<project>corosync</project>
 		<project>firewall</project>
 		<project>glance</project>
 		<project>haproxy</project>
@@ -17,8 +18,8 @@
 		<project>mysql</project>
 		<project>nagios</project>
 		<project>nova</project>
-		<project>corosync</project>
-		<project>ntpd</project>
+		<project>ntp</project>
+		<project>operatingsystem</project>
 		<project>quantum</project>
 		<project>rsyslog</project>
 		<project>stdlib</project>
