--- a/deployment/mcollective/astute/samples/config.yaml
+++ b/deployment/mcollective/astute/samples/config.yaml
@@ -27,8 +27,7 @@ common:
    internal_interface: eth0
    public_interface: eth1
    private_interface: eth2
-   default_gateway_internal: 10.0.0.100
-   default_gateway_public:
+   default_gateway: 172.18.94.1
    nagios_master: fuel-controller-01.your-domain-name.com
    loopback: loopback
    cinder: true
