--- a/deployment/mcollective/astute/samples/config.yaml
+++ b/deployment/mcollective/astute/samples/config.yaml
@@ -27,12 +27,13 @@ common:
    internal_interface: eth0
    public_interface: eth1
    private_interface: eth2
-   default_gateway: 172.18.94.1
+   default_gateway: 10.0.1.100
    nagios_master: fuel-controller-01.your-domain-name.com
    loopback: loopback
    cinder: true
    cinder_on_computes: true
    swift: true
+   repo_proxy: http://10.0.0.100:3128
    dns_nameservers:
    - 10.0.0.100
    - 8.8.8.8
