--- a/deployment/mcollective/astute/samples/config.yaml
+++ b/deployment/mcollective/astute/samples/config.yaml
@@ -11,6 +11,7 @@ common:
    create_networks: true
    fixed_range: 192.168.0.0/16
    floating_range: 10.49.54.0/24
+   swift_loopback: loopback
    nv_physical_volumes:
     - /dev/sdz
     - /dev/sdy
