--- a/iso/ks.cfg
+++ b/iso/ks.cfg
@@ -9,7 +9,7 @@ url --url http://mirror.stanford.edu/yum/pub/centos/6.3/os/x86_64/
 network --bootproto=dhcp
 repo --name=Base --mirrorlist=http://mirrorlist.centos.org/?release=6.3&arch=x86_64&repo=os
 repo --name=Updates --mirrorlist=http://mirrorlist.centos.org/?release=6.3&arch=x86_64&repo=updates
-repo --name=Mirantis --mirrorlist=http://download.mirantis.com/epel-fuel-folsom/mirror.external.list
+repo --name=Mirantis --mirrorlist=http://download.mirantis.com/epel-fuel-folsom-2.1/mirror.external.list
 repo --name=PuppetLabs --baseurl=http://yum.puppetlabs.com/el/6/products/x86_64/
 keyboard us
 rootpw r00tme
