--- a/iso/ks.cfg
+++ b/iso/ks.cfg
@@ -5,15 +5,15 @@ reboot --eject
 lang en_US.UTF-8
 selinux --disabled
 # #url --url http://172.18.67.168/centos-repo/centos-6.3
-# #url --url http://mirror.stanford.edu/yum/pub/centos/6.3/os/x86_64/
-# #url --url http://mirror.centos.org/centos/6.3/os/x86_64/
-url --url http://archive.kernel.org/centos/6.3/os/x86_64/
+# #url --url http://mirror.stanford.edu/yum/pub/centos/6.3/os/x86_64
+# #url --url http://mirror.centos.org/centos/6.3/os/x86_64
+url --url http://archive.kernel.org/centos/6.3/os/x86_64
 network --bootproto=dhcp
 # #repo --name=Base --mirrorlist=http://mirrorlist.centos.org/?release=6.3&arch=x86_64&repo=os
 # #repo --name=Updates --mirrorlist=http://mirrorlist.centos.org/?release=6.3&arch=x86_64&repo=updates
 repo --name=Mirantis --mirrorlist=http://download.mirantis.com/epel-fuel-folsom-2.1/mirror.external.list
-repo --name=PuppetLabs --baseurl=http://yum.puppetlabs.com/el/6/products/x86_64/
-repo --name=PuppetLabsDeps --baseurl=http://yum.puppetlabs.com/el/6/dependencies/x86_64/
+repo --name=PuppetLabs --baseurl=http://yum.puppetlabs.com/el/6/products/x86_64
+repo --name=PuppetLabsDeps --baseurl=http://yum.puppetlabs.com/el/6/dependencies/x86_64
 keyboard us
 rootpw r00tme
 timezone --utc UTC
@@ -125,14 +125,14 @@ tar zxf ${SOURCE}/fuel-modules.tgz -C /etc/puppet/modules
 cat > /etc/yum.repos.d/puppet.repo << EOF
 [Puppetlabs-products]
 name=Puppetlabs repo
-baseurl=http://yum.puppetlabs.com/el/6/products/x86_64/
+baseurl=http://yum.puppetlabs.com/el/6/products/x86_64
 gpgcheck=0
 EOF
 
 cat > /etc/yum.repos.d/puppet-dependencies.repo << EOF
 [Puppetlabs-dependencies]
 name=Puppetlabs Dependencies repo
-baseurl=http://yum.puppetlabs.com/el/6/dependencies/x86_64/
+baseurl=http://yum.puppetlabs.com/el/6/dependencies/x86_64
 gpgcheck=0
 EOF
 
