Revert vault repository in kickstart

--- a/iso/ks.cfg
+++ b/iso/ks.cfg
@@ -14,7 +14,7 @@ network --bootproto=dhcp
 repo --name=Mirantis --mirrorlist=http://download.mirantis.com/epel-fuel-folsom-2.1/mirror.external.list
 repo --name=PuppetLabs --baseurl=http://yum.puppetlabs.com/el/6/products/x86_64
 repo --name=PuppetLabsDeps --baseurl=http://yum.puppetlabs.com/el/6/dependencies/x86_64
-repo --name=Vault6.3 --baseurl=baseurl=http://vault.centos.org/6.3/os/x86_64/
+# #repo --name=Vault6.3 --baseurl=baseurl=http://vault.centos.org/6.3/os/x86_64/
 
 keyboard us
 rootpw r00tme
