--- a/iso/ks.cfg
+++ b/iso/ks.cfg
@@ -7,11 +7,11 @@ selinux --disabled
 # #url --url http://172.18.67.168/centos-repo/centos-6.3
 # #url --url http://mirror.stanford.edu/yum/pub/centos/6.3/os/x86_64/
 # #url --url http://mirror.centos.org/centos/6.3/os/x86_64/
-url --url http://srv11-msk.msk.mirantis.net/centos-repo/centos-minimal/ 
+url --url http://download.mirantis.com/centos-minimal/
 network --bootproto=dhcp
 # #repo --name=Base --mirrorlist=http://mirrorlist.centos.org/?release=6.3&arch=x86_64&repo=os
 # #repo --name=Updates --mirrorlist=http://mirrorlist.centos.org/?release=6.3&arch=x86_64&repo=updates
-repo --name=Mirantis --mirrorlist=http://download.mirantis.com/epel-fuel-folsom-2.1/mirror.internal-stage.list
+repo --name=Mirantis --mirrorlist=http://download.mirantis.com/epel-fuel-folsom-2.1/mirror.external.list
 keyboard us
 rootpw r00tme
 timezone --utc UTC
@@ -119,20 +119,20 @@ cp -r ${SOURCE}/astute*.gem ${repodir}
 tar zxf ${SOURCE}/fuel-modules.tgz -C /etc/puppet/modules
 
 # Prepare local repository specification
-rm /etc/yum.repos.d/CentOS*.repo
-#cat > /etc/yum.repos.d/puppet.repo << EOF
-#[Puppetlabs-products]
-#name=Puppetlabs repo
-#baseurl=http://yum.puppetlabs.com/el/6/products/x86_64/
-#gpgcheck=0
-#EOF
-#
-#cat > /etc/yum.repos.d/puppet-dependencies.repo << EOF
-#[Puppetlabs-dependencies]
-#name=Puppetlabs Dependencies repo
-#baseurl=http://yum.puppetlabs.com/el/6/dependencies/x86_64/
-#gpgcheck=0
-#EOF
+#rm /etc/yum.repos.d/CentOS*.repo
+cat > /etc/yum.repos.d/puppet.repo << EOF
+[Puppetlabs-products]
+name=Puppetlabs repo
+baseurl=http://yum.puppetlabs.com/el/6/products/x86_64/
+gpgcheck=0
+EOF
+
+cat > /etc/yum.repos.d/puppet-dependencies.repo << EOF
+[Puppetlabs-dependencies]
+name=Puppetlabs Dependencies repo
+baseurl=http://yum.puppetlabs.com/el/6/dependencies/x86_64/
+gpgcheck=0
+EOF
 
 # Workaround for Hiera-1.2.1 behavior. Place link to required Hiera config file to Puppet directory
 if [ ! -f /etc/puppet/hiera.yaml ] && [ ! -L /etc/puppet/hiera.yaml ] ; then
