--- a/iso/Makefile
+++ b/iso/Makefile
@@ -20,9 +20,9 @@ LOCAL_MIRROR_CENTOS_OS_BASEURL:=$(LOCAL_MIRROR_CENTOS)/$(CENTOS_RELEASE)/os/$(CE
 LOCAL_MIRROR_UBUNTU:=$(LOCAL_MIRROR)/ubuntu/dists/$(UBUNTU_DISTR)
 LOCAL_MIRROR_UBUNTU_DEB:=$(LOCAL_MIRROR_UBUNTU)/$(UBUNTU_COMP)/binary-$(UBUNTU_ARCH)
 LOCAL_MIRROR_UBUNTU_INSTALLER:=$(LOCAL_MIRROR_UBUNTU)/$(UBUNTU_COMP)/debian-installer/binary-$(UBUNTU_ARCH)
-MIRROR_CENTOS:=http://mirror.centos.org/centos
+MIRROR_CENTOS:=http://download.mirantis.com/centos-6.4
 MIRROR_CENTOS_OS_BASEURL:=$(MIRROR_CENTOS)/$(CENTOS_RELEASE)/os/$(CENTOS_ARCH)
-MIRROR_UBUNTU:=http://mirror.yandex.ru/ubuntu
+MIRROR_UBUNTU:=http://download.mirantis.com/precise-fuel-folsom
 MIRROR_UBUNTU_OS_BASEURL:=$(MIRROR_UBUNTU)/dists/$(UBUNTU_DISTR)/$(UBUNTU_COMP)
 YUM_REPOS:=centos epel fuel_folsom puppetlabs rpmforge
 
