Add puppet-3.4 support
Adding puppet-3.4 support. It also should work under puppet-2.7.
In order to work properly with puppet-3.4 also requires some updates
in packages:
- ruby-rgen >= 0.6.5
- hiera >= 1.3.1

Change-Id: I40ffb6961e2b6de8090040f545648143e926872d

--- a/deployment/puppet/rabbitmq/templates/rabbitmq.config
+++ b/deployment/puppet/rabbitmq/templates/rabbitmq.config
@@ -1,20 +1,20 @@
-% This file managed by Puppet <%= puppetversion %>
-% Template Path: <%= module_name %>/templates/rabbitmq.config
+% This file managed by Puppet <%= @puppetversion %>
+% Template Path: <%= @module_name %>/templates/rabbitmq.config
 [
   {kernel, [
-    {inet_dist_listen_min, <%= inet_dist_listen_min %>},
-    {inet_dist_listen_max, <%= inet_dist_listen_max %>},
+    {inet_dist_listen_min, <%= @inet_dist_listen_min %>},
+    {inet_dist_listen_max, <%= @inet_dist_listen_max %>},
     {inet_default_connect_options, [{nodelay,true}]}
   ]}
-<% if config_cluster -%>
+<% if @config_cluster -%>
   ,{rabbit, [
     {log_levels, [connection,debug,info,error]},
-    {cluster_nodes, [<%= cluster_disk_nodes.map { |n| "\'rabbit@#{n}\'" }.join(', ') %>]}
+    {cluster_nodes, [<%= @cluster_disk_nodes.map { |n| "\'rabbit@#{n}\'" }.join(', ') %>]}
   ]}
 <% end -%>
-<% if config_stomp -%>
+<% if @config_stomp -%>
   ,{rabbitmq_stomp, [
-    {tcp_listeners, [<%= stomp_port %>]}
+    {tcp_listeners, [<%= @stomp_port %>]}
   ]}
 <% end -%>
 ].
