--- a/deployment/puppet/nova/.fixtures.yml
+++ b/deployment/puppet/nova/.fixtures.yml
@@ -1,13 +1,23 @@
 fixtures:
   repositories:
-    "apt": "git://github.com/puppetlabs/puppetlabs-apt.git"
-    "keystone": "git://github.com/puppetlabs/puppetlabs-keystone.git"
-    "mysql":
-      repo: "git://github.com/puppetlabs/puppetlabs-mysql.git"
+    'cinder': 
+      repo: 'git://github.com/stackforge/puppet-cinder.git'
+      ref:  'stable/havana'
+    'inifile':  'git://github.com/puppetlabs/puppetlabs-inifile'
+    'keystone': 
+      repo: 'git://github.com/stackforge/puppet-keystone.git'
+      ref:  'stable/havana'
+    'mysql':
+      repo: 'git://github.com/puppetlabs/puppetlabs-mysql.git'
       ref: 'origin/0.x'
-    "stdlib": "git://github.com/puppetlabs/puppetlabs-stdlib.git"
-    "sysctl": "git://github.com/duritong/puppet-sysctl.git"
-    "rabbitmq": "git://github.com/puppetlabs/puppetlabs-rabbitmq.git"
-    'inifile':  'git://github.com/cprice-puppet/puppetlabs-inifile'
+    'postgresql':
+      repo: "git://github.com/puppetlabs/puppet-postgresql.git"
+      ref: '2.5.0'
+    'qpid': 'git://github.com/dprince/puppet-qpid.git'
+    'rabbitmq':
+      repo: 'git://github.com/puppetlabs/puppetlabs-rabbitmq'
+      ref: 'origin/2.x'
+    'stdlib': 'git://github.com/puppetlabs/puppetlabs-stdlib.git'
+    'sysctl': 'git://github.com/duritong/puppet-sysctl.git'
   symlinks:
-    "nova": "#{source_dir}"
+    'nova': "#{source_dir}"
