Fix supervisor config for rsync container
Fix command parameter in supervisor config for rsync

Change-Id: Ic957a7e6135fb3a0c4dde622047b14e99ff16732

--- a/deployment/puppet/docker/files/supervisor/rsync.conf
+++ b/deployment/puppet/docker/files/supervisor/rsync.conf
@@ -1,5 +1,5 @@
 [program:docker-rsync]
-command=dockerctl start %(program_name)s --attach
+command=dockerctl start rsync --attach
 numprocs=1
 numprocs_start=0
 priority=20
